--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,10 +1,23 @@
 <div class="container">
     <h2>User Settings</h2>
-    <form #form="ngForm">
+    <form #form="ngForm" ngNativeValidate>
         <div class="form-group">
             <label for="name">Name</label>
-            <input id="name" name="name" class="form-control" [(ngModel)]="userSettings.name" >
+            <input id="name" name="name"  required class="form-control" [(ngModel)]="userSettings.name"
+            pattern="[a-zA-Z]+" minlength="3" maxlength="50" #nameField="ngModel" >
+            <div [hidden]="nameField.valid || nameField.untouched" class="alert alert-danger">
+Enter a name
+            </div>
         </div>
+        <!-- Debuggin information works if you set this in an htlm elememnt: #propertyTest="ngModel" -->
+        <!-- <h3>dirty: {{propertyTest.dirty}}</h3>
+        <h3>pristine: {{propertyTest.pristine}}</h3>
+        <h3>touched: {{propertyTest.touched}}</h3>
+        <h3>untouched: {{propertyTest.untouched}}</h3>
+        <h3>valid: {{propertyTest.valid}}</h3>
+        <h3>invalid: {{propertyTest.invalid}}</h3> --> 
+
+
         <div class="form-check form-group">
             <input class="form-check-input" type="checkbox" value="" id="emailOffers" name="emailOffers" [(ngModel)]="userSettings.emailOffers">
             <label class="form-check-label" for="emailOffers">
