--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,11 +1,13 @@
 <div class="container">
     <h2>User Settings</h2>
-    <form #form="ngForm" ngNativeValidate>
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)">
         <div class="form-group">
             <label for="name">Name</label>
             <input id="name" name="name"  required class="form-control" [(ngModel)]="userSettings.name"
-            pattern="[a-zA-Z]+" minlength="3" maxlength="50" #nameField="ngModel" >
-            <div [hidden]="nameField.valid || nameField.untouched" class="alert alert-danger">
+            pattern="[a-zA-Z]+" minlength="3" maxlength="50" #nameField="ngModel" 
+            [class.field-error]="form.submitted && nameField.invalid">
+            <div [hidden]="!form.submitted || nameField.valid"
+             class="alert alert-danger">
 Enter a name
             </div>
         </div>
