--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -11,7 +11,38 @@
              class="alert alert-danger">
 Enter a name
             </div>
+
+            
         </div>
+
+        <div class="form-group">
+          <input type="text"
+          placeholder="Datepicker"
+          class="form-control"
+          bsDatepicker>
+        </div>
+        Start Date : {{startDate}}
+        <button type="button" class="btn btn-primary" name="singleModel"
+        [(ngModel)]="singleModel" btnCheckbox
+        btnCheckboxTrue="On" btnCheckboxFalse="Off">
+{{singleModel}}
+</button>
+
+<div class="form-group">
+  <label for="startTime">Start Time</label>
+  <timepicker [(ngModel)]="startTime" name="startTime" id="startTime"></timepicker>
+  <pre class="alert alert-info">Time is: {{startTime}}</pre>
+
+
+  User Rating
+  <rating [(ngModel)]="userRating" [max]="maxRating" [readonly]="isReadonly"  name="userRating" id="userRating"></rating>
+  <div class="card">
+      <pre class="card-block card-header" style="margin:15px 0;">Rate: <b>{{userRating}}</b> </pre>
+  </div>
+</div>
+
+
+
         <!-- Debuggin information works if you set this in an htlm elememnt: #propertyTest="ngModel" -->
         <!-- <h3>dirty: {{propertyTest.dirty}}</h3>
         <h3>pristine: {{propertyTest.pristine}}</h3>
@@ -22,29 +53,21 @@ Enter a name
 
 
         <div class="form-check form-group">
+          
             <input class="form-check-input" type="checkbox" value="" id="emailOffers" name="emailOffers" [(ngModel)]="userSettings.emailOffers">
             <label class="form-check-label" for="emailOffers">
               Email Special Offers
             </label>
           </div>
           <p>User Interface Style</p>
-          <div class="form-group">
-            <input class="form-check-input" type="radio" name="interfaceStyle" id="lightInterface" [(ngModel)]="userSettings.interfaceStyle">
-            <label class="form-check-label" for="lightInterface">
-              Light
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="interfaceStyle" id="mediumInterface"  [(ngModel)]="userSettings.interfaceStyle">
-            <label class="form-check-label" for="mediumInterface">
-             Medium
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="interfaceStyle" id="darkInterface"  [(ngModel)]="userSettings.interfaceStyle">
-            <label class="form-check-label" for="darkInterface">
-             Dark
-            </label>
+         
+          <div class="btn-group">
+            <label class="btn btn-primary" [(ngModel)]="userSettings.interfaceStyle" name="interfaceStyle"
+                  btnRadio="Light"  tabindex="0" role="button">Light</label>
+            <label class="btn btn-primary" [(ngModel)]="userSettings.interfaceStyle" name="interfaceStyle"
+            btnRadio="Medium"  tabindex="0" role="button">Medium</label>
+            <label class="btn btn-primary" [(ngModel)]="userSettings.interfaceStyle" name="interfaceStyle"
+            btnRadio="Dark"  tabindex="0" role="button">Dark</label>
           </div>
        
           <div class="form-group">
